--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,14 @@ version = "0.1.0"
 
 [dependencies]
 anyhow = "1"
-libc = "0.2"
+nix = "0.22"
+serde = {version = "1", features = ["derive", "rc"]}
+serde_yaml = "0.8"
 tokio = {version = "1", features = ["full"]}
+
+[profile.dev]
+debug = false
+
+[profile.release]
+codegen-units = 1
+lto = true
