Add stop signals, stop timeout, restarting & more

--- a/sulaco.yaml
+++ b/sulaco.yaml
@@ -1,4 +1,8 @@
 services:
   echoer:
     cmd: sleep
-    args: ["30"]
+    args: ["5"]
+  echoer2:
+    cmd: echo
+    args: [hello, world, "!!!"]
+    restart: false
